# genai-examples

./: .gitignore  README.md  pyproject.toml
finetune-gpt2/: README.md  pyproject.toml  train.txt  validation.txt
finetune-gpt2/examples/: basic_finetune.py
finetune-gpt2/finetune_gpt2/: __init__.py  data.py  model.py
finetune-gpt2/tests/: __init__.py  test_data.py
